2003-04-06  Braden McDaniel  <braden@endoframe.com>

        * Updated to ANTLR 2.7.2.

2003-04-05  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/ViewerGlut.cpp, src/lookat/ViewerGlut.h,
          src/lookat/lookat.cpp, src/openvrml/OpenVRML/Audio.cpp,
          src/openvrml/OpenVRML/Audio.h, src/openvrml/OpenVRML/Doc.cpp,
          src/openvrml/OpenVRML/Doc.h, src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/Image.h,
          src/openvrml/OpenVRML/ScriptJDK.cpp,
          src/openvrml/OpenVRML/ScriptJDK.h,
          src/openvrml/OpenVRML/System.cpp,
          src/openvrml/OpenVRML/System.h,
          src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.h,
          src/openvrml/OpenVRML/VrmlRenderContext.cpp,
          src/openvrml/OpenVRML/VrmlRenderContext.h,
          src/openvrml/OpenVRML/basetypes.cpp,
          src/openvrml/OpenVRML/basetypes.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/bvolume.h,
          src/openvrml/OpenVRML/common.h,
          src/openvrml/OpenVRML/doc2.cpp,
          src/openvrml/OpenVRML/doc2.hpp,
          src/openvrml/OpenVRML/dummysound.cpp,
          src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/fieldvalueptr.cpp,
          src/openvrml/OpenVRML/fieldvalueptr.h,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/nodeclassptr.cpp,
          src/openvrml/OpenVRML/nodeclassptr.h,
          src/openvrml/OpenVRML/nodeptr.cpp,
          src/openvrml/OpenVRML/nodeptr.h,
          src/openvrml/OpenVRML/nodetypeptr.cpp,
          src/openvrml/OpenVRML/nodetypeptr.h,
          src/openvrml/OpenVRML/private.h,